ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/Statements/parserES5ForOfStatement3/input.ts.stderr
error: Expected one variable binding
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/Statements/parserES5ForOfStatement3/input.ts:2:13
  |
2 | for (var a, b of X) {
  |             ^

